--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="public/index.js"></script>
 </body>
 </html>
