First Person Camera

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <title>Rasterizer</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="public/style.css">
 </head>
 <body>
     <canvas id="canvas"></canvas>
-    <script type="module" src="public/index.js"></script>
+    <script type="module" src="public/index.js" defer></script>
 </body>
 </html>
